--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         categories.map(cat => React.createElement(CategoryCard, { key: cat.name, category: cat, navigate: navigate }))
                     ),
                     
-                    React.createElement('h3', { className: 'text-lg font-semibold text-primary-deep-teal mb-3 px-4' }, "Featured Experiences"),
+                    React.createElement('h3', { className: 'text-lg font-semibold text-primary-deep-teal mb-3 px-4' }, "Experiencias Destacadas"),
                     React.createElement('div', { className: 'px-4 space-y-4 mb-6' },
                         featuredExperiences.map(exp => React.createElement(ExperienceCard, { key: exp.id, experience: exp, navigate: navigate }))
                     ),
